experimen enviroment ipynb

--- a/project_3/jupiter/notebooks/Untitled.ipynb
+++ b/project_3/jupiter/notebooks/Untitled.ipynb
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ff870225-f64e-4ebe-b267-a59134da4847",
    "metadata": {
     "tags": []
@@ -478,14 +478,14 @@
       "  Downloading ucimlrepo-0.0.6-py3-none-any.whl (8.0 kB)\n",
       "Collecting mysqlclient\n",
       "  Downloading mysqlclient-2.2.4.tar.gz (90 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m90.4/90.4 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m90.4/90.4 kB\u001b[0m \u001b[31m451.3 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
       "\u001b[?25h  Installing build dependencies ... \u001b[?25ldone\n",
       "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
       "\u001b[?25h  Installing backend dependencies ... \u001b[?25ldone\n",
       "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
       "\u001b[?25hBuilding wheels for collected packages: mysqlclient\n",
       "  Building wheel for mysqlclient (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for mysqlclient: filename=mysqlclient-2.2.4-cp39-cp39-linux_x86_64.whl size=132032 sha256=4aece57b9dea1201505b73fdeb0b5b78d9b513829c7e58c7cb4be7c20187466e\n",
+      "\u001b[?25h  Created wheel for mysqlclient: filename=mysqlclient-2.2.4-cp39-cp39-linux_x86_64.whl size=132034 sha256=85e4d3314a744f7a121c6efe8bca69f34e2be8fc52aa01034b96e660f6ec1ff6\n",
       "  Stored in directory: /root/.cache/pip/wheels/df/23/68/faa07b93488a130b3295ca4e91574e85a9dc4764cd463bc152\n",
       "Successfully built mysqlclient\n",
       "Installing collected packages: ucimlrepo, mysqlclient\n",
@@ -643,8 +643,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "ec5ac2cb-483d-4d6f-86c3-340bcd536109",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting imblearn\n",
+      "  Downloading imblearn-0.0-py2.py3-none-any.whl (1.9 kB)\n",
+      "Collecting imbalanced-learn\n",
+      "  Downloading imbalanced_learn-0.12.2-py3-none-any.whl (257 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m258.0/258.0 kB\u001b[0m \u001b[31m736.5 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: scipy>=1.5.0 in /usr/local/lib/python3.9/site-packages (from imbalanced-learn->imblearn) (1.13.0)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.9/site-packages (from imbalanced-learn->imblearn) (1.4.2)\n",
+      "Requirement already satisfied: scikit-learn>=1.0.2 in /usr/local/lib/python3.9/site-packages (from imbalanced-learn->imblearn) (1.4.2)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.9/site-packages (from imbalanced-learn->imblearn) (1.26.4)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.9/site-packages (from imbalanced-learn->imblearn) (3.5.0)\n",
+      "Installing collected packages: imbalanced-learn, imblearn\n",
+      "Successfully installed imbalanced-learn-0.12.2 imblearn-0.0\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install imblearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "a63aeb11-d230-4ef2-abc7-05294b418b1e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "from sqlalchemy import create_engine\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "from sklearn.feature_selection import RFE\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "from sklearn.metrics import accuracy_score, recall_score, f1_score\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "import mlflow\n",
+    "from mlflow.models import infer_signature\n",
+    "from mlflow import MlflowClient\n",
+    "import os\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b5b340d2-1d1b-488f-99f2-59374847392d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting mysqlclient\n",
+      "  Downloading mysqlclient-2.2.4.tar.gz (90 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m90.4/90.4 kB\u001b[0m \u001b[31m3.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25h  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Installing backend dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hBuilding wheels for collected packages: mysqlclient\n",
+      "  Building wheel for mysqlclient (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for mysqlclient: filename=mysqlclient-2.2.4-cp39-cp39-linux_x86_64.whl size=132030 sha256=2b13bac7c910e71c24686f04739f3ebd2755fc56a3190e7eb105544ba75c8dfd\n",
+      "  Stored in directory: /root/.cache/pip/wheels/df/23/68/faa07b93488a130b3295ca4e91574e85a9dc4764cd463bc152\n",
+      "Successfully built mysqlclient\n",
+      "Installing collected packages: mysqlclient\n",
+      "Successfully installed mysqlclient-2.2.4\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install mysqlclient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "dabb36cd-c15a-4ee4-af8c-c65b8f9f0bf3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024/05/07 01:25:19 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'c05e9ac0d05347988d551c2c1cba99df', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n",
+      "2024/05/07 01:25:19 WARNING mlflow.sklearn: Training metrics will not be recorded because training labels were not specified. To automatically record training metrics, provide training labels as inputs to the model training function.\n",
+      "2024/05/07 01:25:19 WARNING mlflow.sklearn: Failed to infer model signature: the trained model does not have a `predict` or `transform` function, which is required in order to infer the signature\n",
+      "2024/05/07 01:25:19 WARNING mlflow.sklearn: Model was missing function: predict. Not logging python_function flavor!\n",
+      "Registered model 'modelo_test' already exists. Creating a new version of this model...\n",
+      "2024/05/07 01:25:21 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: modelo_test, version 2\n",
+      "Created version '2' of model 'modelo_test'.\n",
+      "2024/05/07 01:25:21 WARNING mlflow.utils.autologging_utils: You are using an unsupported version of sklearn. If you encounter errors during autologging, try upgrading / downgrading sklearn to a supported version, or try upgrading MLflow.\n",
+      "2024/05/07 01:25:21 WARNING mlflow.sklearn: Failed to log training dataset information to MLflow Tracking. Reason: 'Series' object has no attribute 'flatten'\n",
+      "Successfully registered model 'modelo_test_3'.\n",
+      "2024/05/07 01:25:24 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: modelo_test_3, version 1\n",
+      "Created version '1' of model 'modelo_test_3'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "os.environ['MLFLOW_S3_ENDPOINT_URL'] = \"http://minio:9000\"\n",
+    "os.environ['AWS_ACCESS_KEY_ID'] = 'admin'\n",
+    "os.environ['AWS_SECRET_ACCESS_KEY'] = 'supersecret'\n",
+    "\n",
+    "MYSQL_CONN_ID = 'mysql_conn'\n",
+    "mysql_engine = create_engine('mysql://user2:password2@mysql2/database2')\n",
+    "# Load data from MySQL\n",
+    "query = \"SELECT * FROM clean_data;\"\n",
+    "df = pd.read_sql(query, con=mysql_engine)\n",
+    "\n",
+    "df = df.loc[:,['age', 'discharge_disposition_id', 'time_in_hospital', 'num_lab_procedures', \n",
+    "               'num_procedures', 'number_inpatient', 'diag_1', 'diag_2', 'diag_3', 'number_diagnoses', \n",
+    "               'readmitted']]\n",
+    "\n",
+    "# Separar características (X) y variable objetivo (y)\n",
+    "X = df.drop(['readmitted'], axis=1)\n",
+    "y = df['readmitted']\n",
+    "\n",
+    "## Escalar características\n",
+    "scaler = MinMaxScaler()\n",
+    "scaler2 = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "X_scaled = scaler2.fit_transform(X_scaled)\n",
+    "\n",
+    "## Balanceo de clases\n",
+    "smote = SMOTE(random_state=42)\n",
+    "X_resampled, y_resampled = smote.fit_resample(X_scaled, y)\n",
+    "\n",
+    "## Dividir conjunto de datos en entrenamiento y prueba\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_resampled, y_resampled, test_size=0.2, random_state=42)\n",
+    "\n",
+    "mlflow.set_tracking_uri(\"http://mlflow:5000\")\n",
+    "#EXPERIMENT_NAME = \"Readmitted-Survived-Classifier-Experiment-1\"\n",
+    "mlflow.set_experiment(\"diabetes-1\")\n",
+    "mlflow.sklearn.autolog(log_input_examples=True, log_model_signatures=True, registered_model_name='modelo_test_3')\n",
+    "\n",
+    "current_experiment = dict(mlflow.get_experiment_by_name('diabetes-1'))\n",
+    "experiment_id = current_experiment['experiment_id']\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Modelo Decision Tree\n",
+    "model_name = 'Decision Tree'\n",
+    "RUN_NAME = f'Readmitted Classifier Experiment {model_name}'\n",
+    "params = {'max_depth': 3, 'min_samples_split': 2}\n",
+    "with mlflow.start_run(experiment_id=experiment_id, run_name=RUN_NAME):\n",
+    "    model = DecisionTreeClassifier(**params)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    predictions = model.predict(X_test)\n",
+    "    accuracy = accuracy_score(y_test, predictions)\n",
+    "    f1 = f1_score(y_test, predictions, average='weighted')  \n",
+    "    '''mlflow.log_params(params)\n",
+    "    mlflow.log_metric(f\"{model_name}_accuracy\", accuracy)\n",
+    "    mlflow.log_metric(f\"{model_name}_f1\", f1)\n",
+    "    mlflow.set_tag(\"Training Info\", f\"{model_name} model for Readmitted\")\n",
+    "    signature = infer_signature(X_train, model.predict(X_train))\n",
+    "    model_info = mlflow.sklearn.log_model(sk_model=model, artifact_path=f\"readmitted_{model_name}_model\",\n",
+    "                                          signature=signature, input_example=X_train,\n",
+    "                                          registered_model_name=f\"tracking-readmitted-{model_name}\")\n",
+    "    mlflow.end_run() \n",
+    "\n",
+    "    client = MlflowClient()\n",
+    "    client.set_registered_model_tag(\"tracking-readmitted-Decision Tree\", \"task\", \"classification\")'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3129bc1-31c6-48cb-8ef7-d71112dffbc1",
    "metadata": {},
    "outputs": [],
    "source": []
